--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
   "dependencies": {
     "acorn": "^7.1.1",
     "angular-expressions": "^1.1.1",
+    "dot-prop": "^5.2.0",
     "kind-of": "^6.0.3",
+    "lodash": "^4.17.20",
     "lodash.template": "^4.5.0",
     "minimist": "^1.2.5"
   }
